Asgm-2/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /home/thanhdxn/Documents/222/PPL_Doc/Asgm-2/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'integer'", "'void'", "'array'", 
                     "'break'", "'float'", "'return'", "'out'", "'boolean'", 
                     "'for'", "'string'", "'continue'", "'do'", "'function'", 
                     "'of'", "'else'", "'if'", "'while'", "'inherit'", "'readInteger'", 
                     "'printInteger'", "'readFloat'", "'writeFloat'", "'readBoolean'", 
                     "'printBoolean'", "'readString'", "'printString'", 
                     "'super'", "'preventDefault'", "'::'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "','", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "LOGIC_OP", "RELATION_OP", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "AUTO", "INT", "VOID", "ARRAY", "BREAK", 
                      "FLOAT", "RETURN", "OUT", "BOOL", "FOR", "STR", "CONTINUE", 
                      "DO", "FUNCT", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "READ_INT", "PRINT_INT", "READ_FLOAT", "PRINT_FLOAT", 
                      "READ_BOOL", "PRINT_BOOL", "READ_STR", "PRINT_STR", 
                      "SUPER_FUNC", "PREVENT_DEFAUT", "OP_STR_CONCAT", "OP_ADD", 
                      "OP_MINUS", "OP_MUL", "OP_DIV", "OP_MOD", "OP_NOT", 
                      "OP_AND", "OP_OR", "OP_EQ_EQ", "OP_EQ", "OP_INEQ", 
                      "OP_LESS", "OP_GREATER", "OP_LESS_OR_EQ", "OP_GREA_OR_EQ", 
                      "BOOLLIT", "ID", "FLOATLIT", "INTLIT", "STRINGLIT", 
                      "SEMI", "COMMA", "LC", "RC", "LB", "RB", "LP", "RP", 
                      "DOT", "COLON", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_funcdecl = 2
    RULE_body = 3
    RULE_vardecl = 4
    RULE_var_shortform = 5
    RULE_var_fullform = 6
    RULE_base = 7
    RULE_helpper = 8
    RULE_paramlist = 9
    RULE_param = 10
    RULE_func_return_type = 11
    RULE_exprlist = 12
    RULE_exprprime = 13
    RULE_nonempty_exprlist = 14
    RULE_expr = 15
    RULE_str_operands = 16
    RULE_int_expr = 17
    RULE_int_term1 = 18
    RULE_int_term2 = 19
    RULE_int_term3 = 20
    RULE_int_term4 = 21
    RULE_int_term5 = 22
    RULE_int_term6 = 23
    RULE_int_term7 = 24
    RULE_subexpr = 25
    RULE_special_func_callstmt = 26
    RULE_special_func_read = 27
    RULE_special_func_print = 28
    RULE_special_func_super = 29
    RULE_callexpr = 30
    RULE_stmtslist = 31
    RULE_stmt = 32
    RULE_assign_stmt = 33
    RULE_if_stmt = 34
    RULE_for_stmt = 35
    RULE_init_expr = 36
    RULE_cond_expr = 37
    RULE_update_expr = 38
    RULE_while_stmt = 39
    RULE_do_while_stmt = 40
    RULE_break_stmt = 41
    RULE_continue_stmt = 42
    RULE_return_stmt = 43
    RULE_call_stmt = 44
    RULE_block_stmt = 45
    RULE_arraylit = 46
    RULE_array_type = 47
    RULE_dimension_list = 48
    RULE_atomic_type = 49
    RULE_idlist = 50

    ruleNames =  [ "program", "decl", "funcdecl", "body", "vardecl", "var_shortform", 
                   "var_fullform", "base", "helpper", "paramlist", "param", 
                   "func_return_type", "exprlist", "exprprime", "nonempty_exprlist", 
                   "expr", "str_operands", "int_expr", "int_term1", "int_term2", 
                   "int_term3", "int_term4", "int_term5", "int_term6", "int_term7", 
                   "subexpr", "special_func_callstmt", "special_func_read", 
                   "special_func_print", "special_func_super", "callexpr", 
                   "stmtslist", "stmt", "assign_stmt", "if_stmt", "for_stmt", 
                   "init_expr", "cond_expr", "update_expr", "while_stmt", 
                   "do_while_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "call_stmt", "block_stmt", "arraylit", "array_type", 
                   "dimension_list", "atomic_type", "idlist" ]

    EOF = Token.EOF
    LOGIC_OP=1
    RELATION_OP=2
    BLOCK_COMMENT=3
    LINE_COMMENT=4
    AUTO=5
    INT=6
    VOID=7
    ARRAY=8
    BREAK=9
    FLOAT=10
    RETURN=11
    OUT=12
    BOOL=13
    FOR=14
    STR=15
    CONTINUE=16
    DO=17
    FUNCT=18
    OF=19
    ELSE=20
    IF=21
    WHILE=22
    INHERIT=23
    READ_INT=24
    PRINT_INT=25
    READ_FLOAT=26
    PRINT_FLOAT=27
    READ_BOOL=28
    PRINT_BOOL=29
    READ_STR=30
    PRINT_STR=31
    SUPER_FUNC=32
    PREVENT_DEFAUT=33
    OP_STR_CONCAT=34
    OP_ADD=35
    OP_MINUS=36
    OP_MUL=37
    OP_DIV=38
    OP_MOD=39
    OP_NOT=40
    OP_AND=41
    OP_OR=42
    OP_EQ_EQ=43
    OP_EQ=44
    OP_INEQ=45
    OP_LESS=46
    OP_GREATER=47
    OP_LESS_OR_EQ=48
    OP_GREA_OR_EQ=49
    BOOLLIT=50
    ID=51
    FLOATLIT=52
    INTLIT=53
    STRINGLIT=54
    SEMI=55
    COMMA=56
    LC=57
    RC=58
    LB=59
    RB=60
    LP=61
    RP=62
    DOT=63
    COLON=64
    WS=65
    ERROR_CHAR=66
    ILLEGAL_ESCAPE=67
    UNCLOSE_STRING=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decl()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.funcdecl()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.vardecl()
                    pass


                self.state = 109
                self.decl()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCT(self):
            return self.getToken(MT22Parser.FUNCT, 0)

        def func_return_type(self):
            return self.getTypedRuleContext(MT22Parser.Func_return_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MT22Parser.ID)
            self.state = 115
            self.match(MT22Parser.COLON)
            self.state = 116
            self.match(MT22Parser.FUNCT)
            self.state = 117
            self.func_return_type()
            self.state = 118
            self.match(MT22Parser.LB)
            self.state = 119
            self.paramlist()
            self.state = 120
            self.match(MT22Parser.RB)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 121
                self.match(MT22Parser.INHERIT)
                self.state = 122
                self.match(MT22Parser.ID)


            self.state = 125
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_shortform(self):
            return self.getTypedRuleContext(MT22Parser.Var_shortformContext,0)


        def var_fullform(self):
            return self.getTypedRuleContext(MT22Parser.Var_fullformContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.var_shortform()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.var_fullform()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_shortformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_shortform




    def var_shortform(self):

        localctx = MT22Parser.Var_shortformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_shortform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.idlist()
            self.state = 134
            self.match(MT22Parser.COLON)
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.BOOL, MT22Parser.STR]:
                self.state = 135
                self.atomic_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 136
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 137
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 140
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_fullformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helpper(self):
            return self.getTypedRuleContext(MT22Parser.HelpperContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_fullform




    def var_fullform(self):

        localctx = MT22Parser.Var_fullformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_fullform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.helpper()
            self.state = 143
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def OP_EQ(self):
            return self.getToken(MT22Parser.OP_EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_base




    def base(self):

        localctx = MT22Parser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_base)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MT22Parser.ID)
            self.state = 146
            self.match(MT22Parser.COLON)
            self.state = 147
            self.atomic_type()
            self.state = 148
            self.match(MT22Parser.OP_EQ)
            self.state = 149
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelpperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def helpper(self):
            return self.getTypedRuleContext(MT22Parser.HelpperContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def base(self):
            return self.getTypedRuleContext(MT22Parser.BaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_helpper




    def helpper(self):

        localctx = MT22Parser.HelpperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_helpper)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(MT22Parser.ID)
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.helpper()
                self.state = 154
                self.match(MT22Parser.COMMA)
                self.state = 155
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.base()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.param()
                self.state = 161
                self.match(MT22Parser.COMMA)
                self.state = 162
                self.paramlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INHERIT:
                    self.state = 167
                    self.match(MT22Parser.INHERIT)


                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 170
                    self.match(MT22Parser.OUT)


                self.state = 173
                self.match(MT22Parser.ID)
                self.state = 174
                self.match(MT22Parser.COLON)
                self.state = 177
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.BOOL, MT22Parser.STR]:
                    self.state = 175
                    self.atomic_type()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 176
                    self.match(MT22Parser.AUTO)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [MT22Parser.COMMA, MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def STR(self):
            return self.getToken(MT22Parser.STR, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_return_type




    def func_return_type(self):

        localctx = MT22Parser.Func_return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_return_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.INT) | (1 << MT22Parser.VOID) | (1 << MT22Parser.ARRAY) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOL) | (1 << MT22Parser.STR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprprime(self):
            return self.getTypedRuleContext(MT22Parser.ExprprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist




    def exprlist(self):
